# ogldev_opengl

./: .gitignore  CMakeLists.txt
Common/: CMakeLists.txt  camera.cpp  glut_backend.cpp
Include/: ogldev_math_3d.h  technique.h
Windows/ogldev_vs_2022/Tutorial01/: Tutorial01.vcxproj
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake
configuration/: visualstudio.vcxproj.user.in
tutorial01/: tutorial01.cpp
tutorial35/: gbuffer.cpp  gbuffer.h  tutorial35.cpp
tutorial36/: gbuffer.cpp  tutorial36.cpp
tutorial36/shaders/: dir_light_pass.fs  point_light_pass.fs
tutorial37/: gbuffer.cpp  tutorial37.cpp
tutorial37/shaders/: null_technique.fs
